List Of Businesses

--- a/neighbourhoodapp/templates/index.html
+++ b/neighbourhoodapp/templates/index.html
@@ -1,166 +1,184 @@
-{% extends 'base.html' %}
-{% load bootstrap4 %}
-{% load static %}
-{% block content %}
+{% extends 'base.html' %} {% load bootstrap4 %} {% load static %} {% block content %}
 <link href="https://fonts.googleapis.com/css?family=Charmonman|Dancing+Script|Kodchasan|Spirax|Abril+Fatface" rel="stylesheet">
 <div class="container container-fluid text-center m-0">
 
-<section class="slide-wrapper text-center" id="section" style="padding:0px;">
+  <section class="slide-wrapper text-center" id="section" style="padding:0px;">
     <div class="container" id="container1" style="margin-right:20px;">
-	    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" style="">
-                <div class="carousel-item active">
-                    <div class="fill" style=" background-color:#48c3af;">
-                      <h1 class="animate rotateOut loop" style="font-family: 'Dosis', cursive; color:white;font-size:70px;">The Neighbourhood</h1>
-                      <br>
-                      <h1 style="font-family: 'Dosis', cursive; color:white;font-size:25px">Get Updates About Your
-                        Neighbourhood</h1>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" style="">
+          <div class="carousel-item active">
+            <div class="fill" style=" background-color:#48c3af;">
+              <h1 class="animate rotateOut loop" style="font-family: 'Dosis', cursive; color:white;font-size:70px;">The Neighbourhood</h1>
+              <br>
+              <h1 style="font-family: 'Dosis', cursive; color:white;font-size:25px">Get Updates About Your Neighbourhood
+              </h1>
 
-                        <div class="card-columns">
-    {% for project in projects %}
-    <div class="card border-secondary w-33 h-auto"><a href="{% url 'project' project.id %}">
+              <div class="card-columns">
+                {% for project in projects %}
+                <div class="card border-secondary w-33 h-auto"><a href="{% url 'project' project.id %}">
 
-        <img class="img W-100" src="{{project.project_image.url}}" data-target="#imageModal{{project.id}}" data-toggle="modal" alt="" class="img-fluid"
-          id="eachimage1" size="100px200"></a>
-      <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.description}}</p>
-     <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.user.username}}</p>
-        <div class="card-body">
-            <span class="badge badge-pill badge-danger" style="font-family: 'Dosis', sans-serif; text-align:center;">Like</span>
-            <span class="badge badge-pill badge-info" style="font-family: 'Dosis', sans-serif;">
+                    <img class="img W-100" src="{{project.project_image.url}}" data-target="#imageModal{{project.id}}" data-toggle="modal" alt=""
+                      class="img-fluid" id="eachimage1" size="100px200"></a>
+                  <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.description}}</p>
+                  <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.user.username}}</p>
+                  <div class="card-body">
+                    <span class="badge badge-pill badge-danger" style="font-family: 'Dosis', sans-serif; text-align:center;">Like</span>
+                    <span class="badge badge-pill badge-info" style="font-family: 'Dosis', sans-serif;">
 
-            <a href="{{ project.project_url}}">Visit Site</a></span>
-            <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a href="{% url 'project' project.id %}">View Project</a></span>
-        </div>
+                      <a href="{{ project.project_url}}">Visit Site</a></span>
+                    <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a
+                        href="{% url 'project' project.id %}">View Project</a></span>
+                  </div>
 
-    </div>
-    {% endfor %}
-
-  </div>
-                    </div>
                 </div>
-                <div class="carousel-item">
-                    <div class="fill" style=" background-color:#b33f4a;"><h1 style="font-family: 'Dosis', cursive; color:white;font-size:70px;">The Neighbourhood</h1>
-                      <br>
-                      <h1 style="font-family: 'Dosis', cursive; color:white;font-size:25px">Get Updates About Your
-                        Neighbourhood</h1>
-                    <div class="card-columns">
-    {% for project in projects %}
-    <div class="card border-secondary w-33"><a href="{% url 'project' project.id %}">
+                {% endfor %}
 
-        <img src="{{project.project_image.url}}" data-target="#imageModal{{project.id}}" data-toggle="modal" alt="" class="img-fluid"
-          id="eachimage1" size="100px200"></a>
-      <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.description}}</p>
-     <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.user.username}}</p>
-     <span class="badge badge-pill badge-info" style="font-family: 'Dosis', sans-serif;">
-       <a href="{{ project.project_url}}">Visit Site</a></span>
-      <span class="badge badge-pill badge-danger" style="font-family: 'Dosis', sans-serif; text-align:center;">Like</span>
-  <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a href="{% url 'project' project.id %}">View Project</a></span>
-
-    </div>
-    {% endfor %}
-  </div>
-
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="fill" style=" background-color:#7fc2f4;"><h1 style="font-family: 'Dosis', cursive; color:white;font-size:70px;">The Neighbourhood</h1>
-                      <br>
-                      <h1 style="font-family: 'Dosis', cursive; color:white;font-size:25px">Get Updates About Your
-                        Neighbourhood</h1>
-                    <div class="card-columns">
-    {% for project in projects %}
-    <div class="card border-secondary w-33"><a href="{% url 'project' project.id %}">
-
-        <img src="{{project.project_image.url}}" data-target="#imageModal{{project.id}}" data-toggle="modal" alt="" class="img-fluid"
-          id="eachimage1" size="100px200"></a>
-      <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.description}}</p>
-     <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.user.username}}</p>
-     <span class="badge badge-pill badge-info" style="font-family: 'Dosis', sans-serif;">
-       <a href="{{ project.project_url}}">Visit Site</a></span>
-      <span class="badge badge-pill badge-danger" style="font-family: 'Dosis', sans-serif; text-align:center;">Like</span>
-  <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a href="{% url 'project' project.id %}">View Project</a></span>
-
-    </div>
-    {% endfor %}
-  </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="fill" style=" background-color:#e47794;"><h1 style="font-family: 'Dosis', cursive; color:white;font-size:70px;">The Neighbourhood</h1>
-                      <br>
-                      <h1 style="font-family: 'Dosis', cursive; color:white;font-size:25px">Get Updates About Your
-                        Neighbourhood</h1>
-                        <div class="card-columns">
-    {% for project in projects %}
-    <div class="card border-secondary w-33"><a href="{% url 'project' project.id %}">
-
-        <img src="{{project.project_image.url}}" data-target="#imageModal{{project.id}}" data-toggle="modal" alt="" class="img-fluid"
-          id="eachimage1" size="100px200"></a>
-      <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.description}}</p>
-     <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.user.username}}</p>
-     <span class="badge badge-pill badge-info" style="font-family: 'Dosis', sans-serif;">
-       <a href="{{ project.project_url}}">Visit Site</a></span>
-      <span class="badge badge-pill badge-danger" style="font-family: 'Dosis', sans-serif; text-align:center;">Like</span>
-  <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a href="{% url 'project' project.id %}">View Project</a></span>
-
-    </div>
-    {% endfor %}
-
-
-  </div>
-
-                    </div>
-                </div>
+              </div>
             </div>
+          </div>
+          <div class="carousel-item">
+            <div class="fill" style=" background-color:#b33f4a;">
+              <h1 style="font-family: 'Dosis', cursive; color:white;font-size:70px;">The Neighbourhood</h1>
+              <br>
+              <h1 style="font-family: 'Dosis', cursive; color:white;font-size:25px">Get Updates About Your Neighbourhood
+              </h1>
+              <div class="card-columns">
+                {% for project in projects %}
+                <div class="card border-secondary w-33"><a href="{% url 'project' project.id %}">
+
+                    <img src="{{project.project_image.url}}" data-target="#imageModal{{project.id}}" data-toggle="modal" alt="" class="img-fluid"
+                      id="eachimage1" size="100px200"></a>
+                  <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.description}}</p>
+                  <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.user.username}}</p>
+                  <span class="badge badge-pill badge-info" style="font-family: 'Dosis', sans-serif;">
+                    <a href="{{ project.project_url}}">Visit Site</a></span>
+                  <span class="badge badge-pill badge-danger" style="font-family: 'Dosis', sans-serif; text-align:center;">Like</span>
+                  <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a
+                      href="{% url 'project' project.id %}">View Project</a></span>
+
+                </div>
+                {% endfor %}
+              </div>
+
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="fill" style=" background-color:#7fc2f4;">
+              <h1 style="font-family: 'Dosis', cursive; color:white;font-size:70px;">The Neighbourhood</h1>
+              <br>
+              <h1 style="font-family: 'Dosis', cursive; color:white;font-size:25px">Get Updates About Your Neighbourhood
+              </h1>
+              <div class="card-columns">
+                {% for project in projects %}
+                <div class="card border-secondary w-33"><a href="{% url 'project' project.id %}">
+
+                    <img src="{{project.project_image.url}}" data-target="#imageModal{{project.id}}" data-toggle="modal" alt="" class="img-fluid"
+                      id="eachimage1" size="100px200"></a>
+                  <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.description}}</p>
+                  <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.user.username}}</p>
+                  <span class="badge badge-pill badge-info" style="font-family: 'Dosis', sans-serif;">
+                    <a href="{{ project.project_url}}">Visit Site</a></span>
+                  <span class="badge badge-pill badge-danger" style="font-family: 'Dosis', sans-serif; text-align:center;">Like</span>
+                  <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a
+                      href="{% url 'project' project.id %}">View Project</a></span>
+
+                </div>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="fill" style=" background-color:#e47794;">
+              <h1 style="font-family: 'Dosis', cursive; color:white;font-size:70px;">The Neighbourhood</h1>
+              <br>
+              <h1 style="font-family: 'Dosis', cursive; color:white;font-size:25px">Get Updates About Your Neighbourhood
+              </h1>
+              <div class="card-columns">
+                {% for project in projects %}
+                <div class="card border-secondary w-33"><a href="{% url 'project' project.id %}">
+
+                    <img src="{{project.project_image.url}}" data-target="#imageModal{{project.id}}" data-toggle="modal" alt="" class="img-fluid"
+                      id="eachimage1" size="100px200"></a>
+                  <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.description}}</p>
+                  <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ project.user.username}}</p>
+                  <span class="badge badge-pill badge-info" style="font-family: 'Dosis', sans-serif;">
+                    <a href="{{ project.project_url}}">Visit Site</a></span>
+                  <span class="badge badge-pill badge-danger" style="font-family: 'Dosis', sans-serif; text-align:center;">Like</span>
+                  <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a
+                      href="{% url 'project' project.id %}">View Project</a></span>
+
+                </div>
+                {% endfor %}
+
+
+              </div>
+
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</section>
+  </section>
 
 
 
-<div class="jumbotron text-center mt-3" style="background-color:white;font-family: 'Dosis', sans-serif;">
 
-  <form action="{%url 'homePage'%}" method="post" id="formletter">
-    {%csrf_token%} {% bootstrap_form letterForm %}
-    <input type="submit" style="background-color:white;" value="Subscribe To Neighbourhood ">
-  </form>
+  <div class="jumbotron text-center mt-3" style="background-color:white;font-family: 'Dosis', sans-serif;">
 
-</div>
+    <form action="{%url 'homePage'%}" method="post" id="formletter">
+      {%csrf_token%} {% bootstrap_form letterForm %}
+      <input type="submit" style="background-color:white;" value="Subscribe To Neighbourhood ">
+    </form>
+
+    <div class="jumbotron">
+
+      <div class="card-columns">
+        {% for business in businesses %}
+        <div class="card border-secondary w-33"><a href="{% url 'project' project.id %}">
+
+            <img src="{{business.business_name}}" data-target="#imageModal{{business.id}}" data-toggle="modal" alt="" class="img-fluid"
+              id="eachimage1" size="100px200"></a>
+          <p style="font-family: 'Dosis', sans-serif; text-align:center;"> {{ business.business_email_address}}</p>
+        </div>
+        {% endfor %}
 
 
-<div class="container" id="">
-  <div class="col-md-12">
-    <div class="footer text-center">
-      <ul id="footer1">
-        <li>ABOUT US</li>
-        <li>SUPPORT</li>
-        <li>PRESS</li>
-        <li>API</li>
-        <li>JOBS</li>
-        <li>PRIVACY</li>
-        <li>TERMS</li>
-        <li>DIRECTORY</li>
-        <li>PROFILES</li>
-        <li>HASHTAGS</li>
-        <li>LANGUAGE</li>
-        <br>
+      </div>
 
-        <li style="font-size:10px;"> <strong>© 2018 MELISSA MALALA</strong></li>
-      </ul>
+    </div>
+
+
+    <div class="container" id="">
+      <div class="col-md-12">
+        <div class="footer text-center">
+          <ul id="footer1">
+            <li>ABOUT US</li>
+            <li>SUPPORT</li>
+            <li>PRESS</li>
+            <li>API</li>
+            <li>JOBS</li>
+            <li>PRIVACY</li>
+            <li>TERMS</li>
+            <li>DIRECTORY</li>
+            <li>PROFILES</li>
+            <li>HASHTAGS</li>
+            <li>LANGUAGE</li>
+            <br>
+
+            <li style="font-size:10px;"> <strong>© 2018 MELISSA MALALA</strong></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-</div>
 
-{% endblock %} {% block scripts %} {{block.super}}
-<script type="text/javascript" src="{%static 'js/scripts.js'%}"></script>
-
-{% endblock %}
+  {% endblock %} {% block scripts %} {{block.super}}
+  <script type="text/javascript" src="{%static 'js/scripts.js'%}"></script> {% endblock %}
