--- a/neighbourhoodapp/templates/index.html
+++ b/neighbourhoodapp/templates/index.html
@@ -19,7 +19,7 @@
             <div class="fill" style=" background-color:#48c3af;">
               <h1 class="animate rotateOut loop" style="font-family: 'Dosis', cursive; color:white;font-size:70px;">The Neighbourhood</h1>
               <br>
-              <h1 style="font-family: 'Dosis', cursive; color:white;font-size:25px">Get Updates About Your Neighbourhood
+              <h1 style="font-family: 'Dosis', cursive; color:white;font-size:25px">News About Your Neighbourhood
               </h1>
 
               <div class="card-columns">
