--- a/neighbourhoodapp/templates/navbar.html
+++ b/neighbourhoodapp/templates/navbar.html
@@ -1,10 +1,10 @@
 {% load static %}
 <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Charmonman|Kodchasan|Dancing+Script|Spirax" rel="stylesheet">
 
-<nav class="navbar bg-light mb-0 mt-0 " id="nav">
+<nav class="navbar mb-0 mt-0 " id="nav" style="background-color:white;">
   <div class="container-fluid">
     <div class="navbar-header">
-        <a class="navbar-brand" href="{% url 'homePage' %}"><img src="https://png.icons8.com/doodle/50/000000/home.png" style="height:40px;width:36px;">
+        <a class="navbar-brand" href="{% url 'homePage' %}"><img src="https://png.icons8.com/doodle/50/000000/home.png" style="height:20px;width:20px;">
       </a>
       <a class="navbar-brand" id="victor" href="{% url 'homePage' %}">NEIGHBOURHOOD
       </a>
@@ -13,43 +13,6 @@
         </div>
     <div class="col-sm-6 col-md-6">
       {% if user.is_authenticated %}
-
-      <!--<li style="font-family: 'Dosis', sans-serif;">-->
-        <!--<a href="{%url 'edit_profile'%}">Edit Profile</a>-->
-      <!--</li>-->
-
-      <li style="font-family: 'Dosis', sans-serif;font-size:10px;">
-        <a href="{% url 'individual_profile_page' user.id %}">Profile</a>
-      </li>
-                   <li style="font-family: 'Dosis', sans-serif; font-size:10px;">
-                    <a href="{%url 'new_project'%}">Post News</a>
-                  </li>
-      <li style="font-family: 'Dosis', sans-serif;font-size:10px;">
-                    <a href="{%url 'new_neighbourhood'%}">Create Neighbourhood</a>
-                  </li>
-
-      <li style="font-family: 'Dosis', sans-serif;font-size:10px;">
-                    <a href="{%url 'new_business'%}">Create Business</a>
-                  </li>
-
-      <li style="font-family: 'Dosis', sans-serif;font-size:10px;">
-        <a href="/logout">Logout</a>
-      </li>
-
-      {% else %}
-      <li style="font-family: 'Dosis', sans-serif;font-size:10px;">
-        <a class='btn btn-default' href="/accounts/login">Login</a>
-      </li>
-
-      <li style="font-family: 'Dosis', sans-serif;font-size:10px;">
-        <a class='btn btn-default' href="/accounts/register">Register</a>
-      </li>
-
-{% endif %}
-    </div>
-
-    <!-- Adding a search form  -->
-    <div class="col-sm-4 col-md-4 navbar-right">
 
       <form class="navbar-form" role="search" action="{% url 'search_businesses' %}" id="navBarSearchForm">
 
@@ -64,8 +27,37 @@
 
       </form>
 
+
+      <li style="font-family: 'Dosis', sans-serif;font-size:12px;">
+        <a href="{% url 'individual_profile_page' user.id %}">Profile</a>
+      </li>
+                   <li style="font-family: 'Dosis', sans-serif; font-size:12px;">
+                    <a href="{%url 'new_project'%}">Post News</a>
+                  </li>
+      <li style="font-family: 'Dosis', sans-serif;font-size:12px;">
+                    <a href="{%url 'new_neighbourhood'%}">Create Neighbourhood</a>
+                  </li>
+
+      <li style="font-family: 'Dosis', sans-serif;font-size:12px;">
+                    <a href="{%url 'new_business'%}">Create Business</a>
+                  </li>
+
+      <li style="font-family: 'Dosis', sans-serif;font-size:12px;">
+        <a href="/logout">Logout</a>
+      </li>
+
+      {% else %}
+      <li style="font-family: 'Dosis', sans-serif;font-size:12px;">
+        <a class='btn btn-default' href="/accounts/login">Login</a>
+      </li>
+
+      <li style="font-family: 'Dosis', sans-serif;font-size:12px;">
+        <a class='btn btn-default' href="/accounts/register">Register</a>
+      </li>
+
+{% endif %}
     </div>
-    <!-- search form end -->
+
 
   </div>
 </nav>
