--- a/neighbourhoodapp/templates/index.html
+++ b/neighbourhoodapp/templates/index.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %} {% load bootstrap4 %} {% load static %} {% block content %}
 <link href="https://fonts.googleapis.com/css?family=Charmonman|Dancing+Script|Kodchasan|Spirax|Abril+Fatface" rel="stylesheet">
 
+
+
+
+
 <div class="container container-fluid text-center m-0 mx-auto">
 
   <section class="slide-wrapper text-center" id="section" style="padding:0px;">
@@ -149,12 +153,19 @@
 
                 {{ neighbourhood.population}}
               </p>
-              <button class="btn btn-lg btn-info" style="font-family:'Dosis', sans-serif; text-align:center;">JOIN THIS NEIGHBOURHOOD</button>
+              <button class="btn btn-lg btn-info"
+                      style="font-family:'Dosis', sans-serif; text-align:center;">
+                {% if user.profile.neighbourhood_id %}
+                <a href="{% url 'join' neighbourhood.id %}" class="btn btn-sm btn-info">
+              JOIN THIS NEIGHBOURHOOD</a> </button>
+              {% endif %}
 
-            </div>
         </div>
-        {% endfor %}
+
+
     </div>
+        {% endfor %}
+</div>
 </div>
 <div class="jumbotron text-center mt-0 mb-0" style="background-color:white;font-family: 'Dosis', sans-serif;">
   <h2 style="text-align:center;font-size:40px;color:blue;"><strong>BUSINESS DIRECTORY</strong></h2>
