--- a/neighbourhoodapp/templates/neighbourhood.html
+++ b/neighbourhoodapp/templates/neighbourhood.html
@@ -24,7 +24,7 @@
 
       <button class="btn btn-lg btn-danger"
                       style="font-family:'Dosis', sans-serif; text-align:center;">
-                <a href="{% url 'homePage' %}" class="btn btn-sm btn-danger">
+                <a href="{% url 'exit' neighbourhood.id %}" class="btn btn-sm btn-danger">
               EXIT THIS NEIGHBOURHOOD</a> </button>
     </div>
 
