--- a/neighbourhoodapp/templates/index.html
+++ b/neighbourhoodapp/templates/index.html
@@ -40,7 +40,7 @@
 
                       <a href="{{ project.project_url}}">Visit Site</a></span>
                     <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a
-                        href="{% url 'project' project.id %}">View Project</a></span>
+                        href="{% url 'project' project.id %}">View News</a></span>
                   </div>
 
                 </div>
@@ -67,7 +67,7 @@
                     <a href="{{ project.project_url}}">Visit Site</a></span>
                   <span class="badge badge-pill badge-danger" style="font-family: 'Dosis', sans-serif; text-align:center;">Like</span>
                   <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a
-                      href="{% url 'project' project.id %}">View Project</a></span>
+                      href="{% url 'project' project.id %}">View News</a></span>
 
                 </div>
                 {% endfor %}
@@ -93,7 +93,7 @@
                     <a href="{{ project.project_url}}">Visit Site</a></span>
                   <span class="badge badge-pill badge-danger" style="font-family: 'Dosis', sans-serif; text-align:center;">Like</span>
                   <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a
-                      href="{% url 'project' project.id %}">View Project</a></span>
+                      href="{% url 'project' project.id %}">View News</a></span>
 
                 </div>
                 {% endfor %}
@@ -118,7 +118,7 @@
                     <a href="{{ project.project_url}}">Visit Site</a></span>
                   <span class="badge badge-pill badge-danger" style="font-family: 'Dosis', sans-serif; text-align:center;">Like</span>
                   <span class="badge badge-pill badge-warning" style="font-family: 'Dosis', sans-serif; text-align:center;"><a
-                      href="{% url 'project' project.id %}">View Project</a></span>
+                      href="{% url 'project' project.id %}">View News</a></span>
 
                 </div>
                 {% endfor %}
